--- a/home-darts-web/src/app/screens/history/history.component.html
+++ b/home-darts-web/src/app/screens/history/history.component.html
@@ -5,5 +5,5 @@
       <hd-history-item [data]="game"></hd-history-item>
     </li>
   </ul>
-  <button *ngIf="showMoreButton" class="btn-large" (click)="loadMore()">Load more</button>
+  <button *ngIf="showMoreButton" (click)="loadMore()">Load more</button>
 </div>
