--- a/home-darts-web/src/app/screens/settings/settings.component.scss
+++ b/home-darts-web/src/app/screens/settings/settings.component.scss
@@ -3,7 +3,7 @@
 
 :host {
   display: block;
-  width: 100dvw;
+  width: 100%;
   height: calc(100dvh - $header-height);
   background-color: $block-color;
 }
