--- a/home-darts-web/src/app/components/sidenav-container/sidenav-container.component.html
+++ b/home-darts-web/src/app/components/sidenav-container/sidenav-container.component.html
@@ -5,7 +5,9 @@
   <mat-drawer-content>
     <div class="drawer-content">
       <hd-sidenav-menu class="block sidenav-menu"></hd-sidenav-menu>
-      <ng-content></ng-content>
+      <div class="main-content">
+        <ng-content></ng-content>
+      </div>
     </div>
   </mat-drawer-content>
 </mat-drawer-container>
