--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.html
@@ -1,44 +1,44 @@
 <div class="screen-container">
   <form [formGroup]="form" (ngSubmit)="submit()">
-    <div *ngIf="players$ | async as players" class="atc-start__param">
-      <h3>Players</h3>
-      <hd-atc-start-players-list
-        formControlName="players"
-        [players]="players"></hd-atc-start-players-list>
-    </div>
-    <div class="atc-start__param">
-      <h3>Direction</h3>
-      <mat-form-field>
-        <mat-select formControlName="direction">
-          <mat-option
-            *ngFor="let item of gameDirectionItems"
-            [value]="item.value">{{ item.label }}</mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div class="atc-start__param">
-      <mat-checkbox formControlName="fastGame" color="primary">Fast game</mat-checkbox>
-    </div>
-    <div class="atc-start__param">
-      <h3>Hit detection</h3>
+    <div class="block p-24 mb-24">
+      <div class="mb-24">
+        <mat-form-field class="w-100">
+          <mat-select formControlName="direction">
+            <mat-option
+              *ngFor="let item of gameDirectionItems"
+              [value]="item.value">{{ item.label }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
 
-      <mat-button-toggle-group
-        name="fontStyle"
-        aria-label="Hit detection mode"
-        formControlName="hitDetection">
-        <mat-button-toggle
-          *ngFor="let sectionType of sectionTypes"
-          [value]="sectionType.value">{{ sectionType.label }}</mat-button-toggle>
-      </mat-button-toggle-group>
+      <div class="mb-24">
+        <mat-checkbox formControlName="fastGame" color="primary">Fast game</mat-checkbox>
+      </div>
 
+      <div class="mb-24">
+        <mat-button-toggle-group
+          class="w-100"
+          name="fontStyle"
+          aria-label="Hit detection mode"
+          formControlName="hitDetection">
+          <mat-button-toggle
+            *ngFor="let sectionType of sectionTypes"
+            class="flex-1-1"
+            [value]="sectionType.value">{{ sectionType.label }}</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+
+      <div class="mb-24">
+        <mat-checkbox formControlName="includeBull" color="primary">Include bull</mat-checkbox>
+      </div>
+
+      <div *ngIf="players$ | async as players">
+        <hd-atc-start-players-list
+          formControlName="players"
+          [players]="players"></hd-atc-start-players-list>
+      </div>
     </div>
-    <div class="atc-start__param">
-      <mat-checkbox formControlName="includeBull" color="primary">Include bull</mat-checkbox>
-    </div>
-    <button
-      mat-raised-button
-      color="primary"
-      type="submit"
-      [disabled]="loading || !form.valid">Start</button>
+
+    <button mat-raised-button color="primary" type="submit" class="btn">START</button>
   </form>
 </div>
