--- a/home-darts-web/src/app/screens/settings/settings.component.scss
+++ b/home-darts-web/src/app/screens/settings/settings.component.scss
@@ -5,7 +5,16 @@
   display: block;
   width: 100%;
   height: calc(100dvh - $header-height);
-  background-color: $block-color;
+
+  @media screen and (max-width: $breakpoint-mobile) {
+    background-color: $block-color;
+  }
+}
+
+.settings-block {
+  @media screen and (min-width: $breakpoint-mobile) {
+    padding: 16px;
+  }
 }
 
 .settings-param-name {
