--- a/home-darts-web/src/app/components/home/home.component.html
+++ b/home-darts-web/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="screen-container">
   <ul cdkMenu>
-    <li *ngFor="let item of menuItems" class="item" cdkMenuItem>
+    <li *ngFor="let item of menuItems; let isLast = last" [class.mb-16]="!isLast" cdkMenuItem>
       <a mat-raised-button color="primary" class="btn" [routerLink]="item.link">
         <mat-icon>{{ item.icon }}</mat-icon>
         <span>{{ item.name }}</span>
