--- a/home-darts-web/src/app/screens/settings/settings.component.html
+++ b/home-darts-web/src/app/screens/settings/settings.component.html
@@ -5,9 +5,22 @@
         <p class="settings-param-name">Vibration</p>
         <mat-slide-toggle color="primary" formControlName="vibration" [hideIcon]="true"></mat-slide-toggle>
       </div>
+
       <div class="settings-slide-item">
         <p class="settings-param-name">Sounds</p>
         <mat-slide-toggle color="primary" formControlName="sounds" [hideIcon]="true"></mat-slide-toggle>
+      </div>
+
+      <div class="settings-slide-item">
+        <p class="settings-param-name">Dartboard style</p>
+        <mat-button-toggle-group
+          name="fontStyle"
+          aria-label="Dartboard style"
+          formControlName="dartboardStyle">
+          <mat-button-toggle
+            *ngFor="let styleItem of dartboardStyleItems"
+            [value]="styleItem.value">{{ styleItem.label }}</mat-button-toggle>
+        </mat-button-toggle-group>
       </div>
     </form>
   </div>
