front. statistics material redesign

--- a/home-darts-web/src/app/components/home/home.component.html
+++ b/home-darts-web/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="screen-container">
   <ul cdkMenu>
     <li *ngFor="let item of menuItems; let isLast = last" [class.mb-16]="!isLast" cdkMenuItem>
-      <a mat-raised-button color="primary" class="btn" [routerLink]="item.link">
+      <a mat-raised-button color="primary" class="btn w-100" [routerLink]="item.link">
         <mat-icon>{{ item.icon }}</mat-icon>
         <span>{{ item.name }}</span>
       </a>
