--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-start-players-list/atc-start-players-list.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-start-players-list/atc-start-players-list.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="mb-16 w-100">
+<mat-form-field class="mat-form-no-subscript mb-16 w-100">
   <mat-label>Select player</mat-label>
   <mat-select (valueChange)="onItemChange($event)">
     <mat-option
