--- a/home-darts-web/src/app/screens/statistics/statistics.component.html
+++ b/home-darts-web/src/app/screens/statistics/statistics.component.html
@@ -1,26 +1,37 @@
 <div class="screen-container">
-  <p>Player</p>
-  <div class="statistics__dropdown-container">
-    <select [formControl]="playerControl" class="statistics__dropdown">
-      <option *ngFor="let player of players$ | async" [ngValue]="player">{{ player.username }}</option>
-    </select>
+  <div class="block mb-24 p-16">
+    <mat-form-field class="mat-form-no-subscript w-100">
+      <mat-label>Select player</mat-label>
+      <mat-select [formControl]="playerControl">
+        <mat-option
+          *ngFor="let player of players$ | async"
+          [value]="player">{{ player.username }}</mat-option>
+      </mat-select>
+    </mat-form-field>
   </div>
-
-  <div>
-    <ng-container *ngIf="stats$ | async as stats; else playerNotSelected">
-      <div class="statistics__section">
-        <h3>General</h3>
-        <p>Games count - {{ stats.gamesCount }}</p>
-        <p>Throws count - {{ stats.throwsCount }}</p>
-        <p>Total playing time - {{ stats.totalPlayingTimeSeconds | formatTimeInterval }}</p>
+  <ng-container *ngIf="stats$ | async as stats; else playerNotSelected">
+    <div class="mb-12 flex text-align-center">
+      <div class="block flex-1-1 p-16 mr-12">
+        <p class="mb-12">Total games</p>
+        <h2>{{ stats.gamesCount }}</h2>
       </div>
+      <div class="block flex-1-1 p-16">
+        <p class="mb-12">Total throws</p>
+        <h2>{{ stats.throwsCount }}</h2>
+      </div>
+    </div>
 
-      <div class="statistics__section">
+    <div class="block mb-24 p-16 text-align-center">
+      <p>Total playing time - <span class="statistics-font-weight-500">{{ stats.totalPlayingTimeSeconds | formatTimeInterval }}</span></p>
+    </div>
+
+    <div class="block p-16">
+      <div>
         <h3>Around the clock</h3>
-        <hd-atc-statistics class="statistics__section" [stats]="stats.aroundTheClock"></hd-atc-statistics>
+        <hd-atc-statistics [stats]="stats.aroundTheClock"></hd-atc-statistics>
       </div>
-    </ng-container>
-  </div>
+    </div>
+  </ng-container>
 
   <ng-template #playerNotSelected>Select player</ng-template>
 </div>
