--- a/home-darts-web/src/styles/_main.scss
+++ b/home-darts-web/src/styles/_main.scss
@@ -30,14 +30,14 @@ ul {
   padding: 0;
 }
 
-.flex-1-1 {
-  flex: 1 1;
-}
-
 .screen-container {
   padding: 24px 16px;
 }
 
 .w-100 {
   width: 100%;
+}
+
+.text-align-center {
+  text-align: center;
 }
