--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="block p-24 mb-24">
       <div class="mb-24">
-        <mat-form-field class="w-100">
+        <mat-form-field class="mat-form-no-subscript w-100">
           <mat-select formControlName="direction">
             <mat-option
               *ngFor="let item of gameDirectionItems"
@@ -39,6 +39,6 @@
       </div>
     </div>
 
-    <button mat-raised-button color="primary" type="submit" class="btn">START</button>
+    <button mat-raised-button color="primary" type="submit" class="btn w-100">START</button>
   </form>
 </div>
