--- a/home-darts-web/src/app/screens/statistics/statistics.component.scss
+++ b/home-darts-web/src/app/screens/statistics/statistics.component.scss
@@ -1,11 +1,3 @@
-.statistics__dropdown-container {
-  margin-bottom: 10px;
-}
-
-.statistics__dropdown {
-  font-size: 2rem;
-}
-
-.statistics__section:not(:last-child) {
-  margin-bottom: 10px;
+.statistics-font-weight-500 {
+  font-weight: 500;
 }
