--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.scss
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.scss
@@ -1,52 +1,30 @@
-.atc-game__tools-container {
-  padding: 20px;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 125px;
+@import '../../../../../styles/colors';
+
+.atc-game-particpant-container:not(:last-child) {
+  margin-bottom: 12px;
+}
+
+.atc-game-dartboard-container {
+  max-width: 372px;
+}
+
+.atc-game-tools {
   box-sizing: border-box;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  background: $background-color;
+  background: linear-gradient(0deg, $background-color 0%, $background-color 60%, rgba(0,0,0,0) 100%);
 }
 
-.atc-game__participants {
-  margin-bottom: 10px;
+.atc-game-spacer {
+  height: 78px - 24px;
 }
 
-.atc-game__dartboard-container {
-  margin: 0 auto;
-  max-width: 320px;
+.atc-game-tools-button:not(:last-child) {
+  margin-right: 16px;
 }
 
-.atc-game__sections {
-  font-size: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.atc-game__digit:not(:last-child) {
-  margin-right: 20px;
-}
-
-.atc-game__tools {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.atc-game__tool-btn {
-  font-size: 24px;
-  width: 80px;
-  padding: 24px 0;
-  text-transform: uppercase;
-}
-
-.atc-game__tool-btn:not(:disabled) {
-  cursor: pointer;
-}
-
-.atc-game__tool-btn-complete {
-  position: absolute;
-  bottom: 100%;
-  width: 50%;
+::ng-deep .atc-game-tools .mat-mdc-raised-button > mat-icon.mat-icon {
+  margin-right: 0;
 }
