--- a/home-darts-web/src/styles/_colors.scss
+++ b/home-darts-web/src/styles/_colors.scss
@@ -1,3 +1,7 @@
 $block-color: #fff;
 $text-color: #333;
 $background-color: #E3E7FD;
+$highlight-color: #D2D9FF;
+
+$accent-green-color: #7FA47F;
+$accent-red-color: #CD6868;
