--- a/home-darts-web/src/styles/_colors.scss
+++ b/home-darts-web/src/styles/_colors.scss
@@ -2,6 +2,7 @@ $block-color: #fff;
 $text-color: #333;
 $background-color: #E3E7FD;
 $highlight-color: #D2D9FF;
+$copyright-text-color: #C0C2CD;
 
 $accent-green-color: #7FA47F;
 $accent-red-color: #CD6868;
