--- a/home-darts-web/src/app/modules/core/components/sidenav-container/sidenav-container.component.scss
+++ b/home-darts-web/src/app/modules/core/components/sidenav-container/sidenav-container.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/variables';
+@import '../../../../../styles/variables';
 
 .drawer-container {
   height: calc(100vh - $header-height);
