--- a/home-darts-web/src/app/screens/history/history.component.scss
+++ b/home-darts-web/src/app/screens/history/history.component.scss
@@ -1,3 +1,7 @@
 .history__title, .history__item {
-  margin-bottom: 10px;
+  margin-bottom: 16px;
+}
+
+.history__actions {
+  text-align: center;
 }
