--- a/home-darts-web/src/app/screens/history/components/history-item/history-item.component.html
+++ b/home-darts-web/src/app/screens/history/components/history-item/history-item.component.html
@@ -1,11 +1,19 @@
-<ng-container *ngIf="data">
-  <div class="history-item__first-line">
-    <p>{{ data.creationDate | date:'dd.MM.YYYY HH:mm' }}</p>
-    <p>{{ gamemodesNames[data.gamemodeName] }}</p>
-  </div>
-  <div *ngIf="data.throws" class="history-item__second-line">
-    <p>Hits / throws: {{ data.hits }} / {{ data.throws }}</p>
-    <p>{{ (data.hits / data.throws * 100) | number: '1.2-2' }}%</p>
-  </div>
-  <a *ngIf="!data.isCompleted" [routerLink]="['..', 'around-the-clock', data.id]" [relativeTo]="route">Load game</a>
-</ng-container>
+<mat-card *ngIf="data">
+  <mat-card-header>
+    <mat-card-title>{{ gamemodesNames[data.gamemodeName] }}</mat-card-title>
+    <mat-card-subtitle
+      [matTooltip]="(data.creationDate | date:'dd.MM.YYYY HH:mm') ?? ''"
+      matTooltipPosition="above"
+    >{{ data.creationDate | relativeTime: dateNow }}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <div *ngIf="data.throws" class="history-item__throws-info">
+      <p>Hits: {{ data.hits }}</p>
+      <p>Throws: {{ data.throws }}</p>
+      <p>Hit rate: {{ (data.hits / data.throws * 100) | number: '1.2-2' }}%</p>
+    </div>
+  </mat-card-content>
+  <mat-card-actions *ngIf="!data.isCompleted" align="end">
+    <a mat-button color="primary" [routerLink]="['..', 'around-the-clock', data.id]" [relativeTo]="route">Load game</a>
+  </mat-card-actions>
+</mat-card>
