front. atc fix. undo button is not disable when game is completed

--- a/home-darts-web/src/app/modules/core/components/copyright/copyright.component.html
+++ b/home-darts-web/src/app/modules/core/components/copyright/copyright.component.html
@@ -7,7 +7,6 @@
   <a
     href="https://github.com/tdedetd/home-darts"
     target="_blank"
-    rel="noreferrer"
-    rel="noopener"
+    rel="noopener noreferrer"
     class="copyright-link">Github</a>
 </p>
