front. atc init last throws, statuses; atc error screens

--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.html
@@ -1,3 +1,10 @@
+<hd-error-screen
+  *ngIf="errorNoSuchGame$ | async"
+  message="The game doesn't exists"></hd-error-screen>
+<hd-error-screen
+  *ngIf="errorUnexpected$ | async"
+  message="Unexpected error while loading the game"></hd-error-screen>
+
 <div *ngIf="isGameNotCompleted$ | async; else gameCompleted" class="screen-container">
   <ul class="mb-24">
     <li *ngFor="let player of players$ | async" class="atc-game-particpant-container">
