--- a/home-darts-web/src/styles/_colors.scss
+++ b/home-darts-web/src/styles/_colors.scss
@@ -3,6 +3,6 @@ $text-color: #333;
 $background-color: #E3E7FD;
 $highlight-color: #D2D9FF;
 $copyright-text-color: #C0C2CD;
-
 $accent-green-color: #7FA47F;
 $accent-red-color: #CD6868;
+$error-screen-color: #9CA6DE;
