--- a/home-darts-web/src/styles/_variables.scss
+++ b/home-darts-web/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 $header-height: 56px;
 $header-spacing: 24px;
+$sidebar-desktop-width: 250px;
 
-$breakpoint-mobile: 768px;
+$breakpoint-tablet: 768px;
