--- a/home-darts-web/src/app/screens/history/components/history-item/history-item.component.scss
+++ b/home-darts-web/src/app/screens/history/components/history-item/history-item.component.scss
@@ -1,3 +1,7 @@
+.history-item__card-content {
+  height: 28px;
+}
+
 .history-item__throws-info {
   display: flex;
   justify-content: space-between;
