--- a/home-darts-web/src/app/screens/history/history.component.html
+++ b/home-darts-web/src/app/screens/history/history.component.html
@@ -1,6 +1,6 @@
 <div class="screen-container">
   <h2 class="history__title">History</h2>
-  <ul>
+  <ul class="history-list">
     <li *ngFor="let game of games" class="history__item">
       <hd-history-item [data]="game"></hd-history-item>
     </li>
