--- a/home-darts-web/src/app/screens/statistics/statistics.component.html
+++ b/home-darts-web/src/app/screens/statistics/statistics.component.html
@@ -14,30 +14,27 @@
     </div>
 
     <ng-container *ngIf="stats$ | async as stats; else playerNotSelected">
-      <div class="mb-48">
-        <div class="mb-12 flex text-align-center">
-          <div class="block flex-1-1 p-16 mr-12">
-            <p class="mb-8">Total games</p>
-            <h2>
-              <ng-container *ngIf="isCounterAnimationsOn">
-                {{ stats.gamesCount | animated: animationPipeCallback: animationOptions | async }}
-              </ng-container>
-              <ng-container *ngIf="!isCounterAnimationsOn">{{ stats.gamesCount }}</ng-container>
-            </h2>
-          </div>
-          <div class="block flex-1-1 p-16">
-            <p class="mb-8">Total throws</p>
-            <h2>
-              <ng-container *ngIf="isCounterAnimationsOn">
-                {{ stats.throwsCount | animated: animationPipeCallback: animationOptions | async }}
-              </ng-container>
-              <ng-container *ngIf="!isCounterAnimationsOn">{{ stats.throwsCount }}</ng-container>
-            </h2>
-          </div>
+      <div class="common-stats-cards text-align-center mb-48">
+        <div class="block p-16">
+          <p class="mb-8">Games</p>
+          <h2>
+            <ng-container *ngIf="isCounterAnimationsOn">
+              {{ stats.gamesCount | animated: animationPipeCallback: animationOptions | async }}
+            </ng-container>
+            <ng-container *ngIf="!isCounterAnimationsOn">{{ stats.gamesCount }}</ng-container>
+          </h2>
         </div>
-
-        <div class="block p-16 text-align-center">
-          <p class="mb-8">Total playing time</p>
+        <div class="block p-16">
+          <p class="mb-8">Throws</p>
+          <h2>
+            <ng-container *ngIf="isCounterAnimationsOn">
+              {{ stats.throwsCount | animated: animationPipeCallback: animationOptions | async }}
+            </ng-container>
+            <ng-container *ngIf="!isCounterAnimationsOn">{{ stats.throwsCount }}</ng-container>
+          </h2>
+        </div>
+        <div class="block stats-playing-time-card p-16">
+          <p class="mb-8">Playing time</p>
           <h2>
             <ng-container *ngIf="isCounterAnimationsOn">
               {{
