--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.html
@@ -77,7 +77,7 @@
     matTooltip="Complete"
     color="primary"
     type="button"
-    [disabled]="loading"
+    [disabled]="loading || (isGameCompleted$ | async)"
     class="atc-game-tools-button btn flex-1-1"
     (click)="onCompleteClick()"
   >
